<resources>
    <string name="app_name">Info Collection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">移动安全与测评实验一</string>
    <string name="nav_header_subtitle">rollyourmom@ucas.ac.cn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">关于这个作业</string>

    <string name="menu_sys">系统信息</string>
    <string name="menu_phone">电话信息</string>
    <string name="menu_hardware">硬件信息</string>
    <string name="menu_cpu">CPU信息</string>
    <string name="menu_sensor">传感器信息</string>
    <string name="menu_battery">电池信息</string>
    <string name="menu_camera">摄像头信息</string>
    <string name="menu_ram">内存信息</string>
    <string name="menu_store">存储信息</string>
    <string name="menu_net">网络信息</string>
    <string name="menu_process">进程信息</string>
    <string name="menu_app">APP信息</string>
    <string name="author_name">Roll Your Mom</string>
    <string name="info_unknown">Unknown.</string>

</resources>